# web3-tasks

./: .gitignore  README.md
advanced1-dapp-backend/task1/experienceblock/: 01QueryBlock.go  README.md  go.mod  go.sum  main.go
advanced1-dapp-backend/task1/experienceblock/store/: store.go
advanced1-dapp-backend/task1/gencontractcode/: README.md  contract_Counter_sol_Counter.abi  go.mod  go.sum  main.go
advanced1-dapp-backend/task1/gencontractcode/contract/: Counter.sol
advanced1-dapp-backend/task1/gencontractcode/counter/: counter.go
advanced1-dapp-backend/task2/: README.md
advanced1-dapp-backend/task3/experiencesolanago/: README.md  go.mod  main.go  solana-experience.md
advanced1-dapp-backend/task3/experiencesolanago/client/tokenswap/: tokenswap.go
advanced1-dapp-backend/task3/experiencesolanago/config/: config.go
advanced1-dapp-backend/task3/experiencesolanago/utils/: utils.go
advanced2-contract-dev/task1/meme-experience/: .env.sample  README.md  gas-report.txt  hardhat.config.js  package-lock.json  package.json
advanced2-contract-dev/task1/meme-experience/artifacts/contracts/LiquidityPool.sol/: IERC20.dbg.json  IERC20.json  LiquidityPool.dbg.json  LiquidityPool.json
advanced2-contract-dev/task1/meme-experience/artifacts/contracts/Meme.sol/: Meme.dbg.json  Meme.json
advanced2-contract-dev/task1/meme-experience/cache/: .hardhat-network-instances.json  console-history.txt  solidity-files-cache.json
advanced2-contract-dev/task1/meme-experience/contracts/: LiquidityPool.sol  Meme.sol
advanced2-contract-dev/task1/meme-experience/coverage/: coverage-final.json  index.html  lcov.info
advanced2-contract-dev/task1/meme-experience/coverage/contracts/: LiquidityPool.sol.html
advanced2-contract-dev/task1/meme-experience/ignition/modules/: LiquidityPool.js  Meme.js
advanced2-contract-dev/task1/meme-experience/test/: Meme.js
advanced2-contract-dev/task2/metanode-stake/: .env.sample  README.md  gas-report.txt  hardhat.config.js  package-lock.json  package.json
advanced2-contract-dev/task2/metanode-stake/.openzeppelin/: sepolia.json
advanced2-contract-dev/task2/metanode-stake/cache/: .hardhat-network-instances.json  solidity-files-cache.json  validations.json
advanced2-contract-dev/task2/metanode-stake/contracts/: MetaNodeStake.sol  MetaNodeToken.sol
advanced2-contract-dev/task2/metanode-stake/coverage/: coverage-final.json  index.html  lcov.info
advanced2-contract-dev/task2/metanode-stake/coverage/contracts/: MetaNodeStake.sol.html  MetaNodeToken.sol.html  index.html
advanced2-contract-dev/task2/metanode-stake/ignition/modules/: MetaNodeStake.js  MetaNodeToken.js
advanced2-contract-dev/task2/metanode-stake/test/: test.js
advanced2-contract-dev/task3/foundry-experience/: .gas-snapshot  GAS_OPTIMIZATION_REPORT.md  GAS_REPORT.md  README.md
advanced2-contract-dev/task3/foundry-experience/cache/: solidity-files-cache.json  test-failures
advanced2-contract-dev/task3/foundry-experience/script/: Arithmetic.s.sol
advanced2-contract-dev/task3/foundry-experience/src/: Arithmetic.sol  ArithmeticOptimized1.sol  ArithmeticOptimized2.sol
advanced2-contract-dev/task3/foundry-experience/test/: Arithmetic.t.sol  GasComparison.t.sol
advanced2-contract-dev/task4/examples/solana-dev/: README.md  理论知识.md
advanced2-contract-dev/task4/examples/solana-dev/spl-token-program/: Anchor.toml  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  tsconfig.json
advanced2-contract-dev/task4/examples/substrate-dev/: Cargo.toml  README.md  理论知识.md
advanced2-contract-dev/task4/examples/substrate-dev/docs/: architecture.md  deployment.md  pallets.md
advanced2-contract-dev/task4/examples/substrate-dev/node/: Cargo.toml
advanced2-contract-dev/task4/examples/substrate-dev/node/src/: chain_spec.rs  cli.rs  rpc.rs  service.rs
advanced2-contract-dev/task4/examples/substrate-dev/pallets/asset-registry/: Cargo.toml
advanced2-contract-dev/task4/examples/substrate-dev/pallets/asset-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
advanced2-contract-dev/task4/examples/substrate-dev/pallets/voting/: Cargo.toml
advanced2-contract-dev/task4/examples/substrate-dev/pallets/voting/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
advanced2-contract-dev/task4/examples/substrate-dev/runtime/: Cargo.toml
advanced2-contract-dev/task4/examples/substrate-dev/runtime/src/: lib.rs  weights.rs
advanced2-contract-dev/task4/examples/substrate-dev/scripts/: build.sh  init.sh
advanced2-contract-dev/task4/examples/substrate-dev/scripts/docker/: Dockerfile  docker-compose.yml
advanced2-contract-dev/task4/solana-demo/: README.md
advanced2-contract-dev/task4/solana-demo/spl-token-program/: Anchor.toml  Dockerfile  Makefile  README.md  docker-compose.yml  tsconfig.json
advanced2-contract-dev/task4/solana-demo/spl-token-program/scripts/: deploy.js  dev-server.js  token-manager.js
advanced2-contract-dev/task4/solana-demo/spl-token-program/tests/: spl-token-program.ts
advanced2-contract-dev/task4/substrate-demo/: README2.md
base2-smartcontractbase/: README.md  package-lock.json  package.json
base2-smartcontractbase/artifacts/: BeggingContract.json  BeggingContract_metadata.json  BinarySearch.json  BinarySearch_metadata.json  ERC20.json  ERC20_metadata.json  Int2Roman.json  Int2Roman_metadata.json  Int2Rome.json  Int2Rome_metadata.json  MergeSortedArray.json  MergeSortedArray_metadata.json  MyERC20.json  MyERC20_metadata.json  MyERC721.json  MyERC721_metadata.json  MyNFT.json  MyNFT_metadata.json  ReverseString.json  ReverseString_metadata.json  Roman2Int.json  Roman2Int_metadata.json  Rome2Int.json  Rome2Int_metadata.json  Voting.json  Voting_metadata.json
base2-smartcontractbase/task1/: BinarySearch.sol  Int2Roman.sol  MergeSortedArray.sol  ReverseString.sol  Roman2Int.sol  Voting.sol
base2-smartcontractbase/task2/: BeggingContract.sol  MyERC20.sol  MyNFT.sol
base2-smartcontractbase/task2/data/: avator.json
base2-smartcontractbase/task3/: NFTAution.sol
(+32 files in other folders)
